--- a/tests/loop3.cmp
+++ b/tests/loop3.cmp
@@ -6,10 +6,10 @@
     2: DUP
     3: 3
     4: >=
-    5: JmpIfFalse: +2
-    6: JMP: +3
+    5: JmpIfFalse: 7
+    6: JMP: 9
     7: ++
-    8: JMP: -6
+    8: JMP: 2
     9: POP
    10: EXIT
 
@@ -19,20 +19,20 @@
     2: #4 line 4 ("", 1) DUP
     3: #4 line 4 ("", 1, 1) 3
     4: #4 line 4 ("", 1, 1, 3) >=
-    5: #4 line 4 ("", 1, 0) JmpIfFalse: +2
+    5: #4 line 4 ("", 1, 0) JmpIfFalse: 7
     7: #4 line 5 ("", 1) ++
-    8: #4 line 6 ("", 2) JMP: -6
+    8: #4 line 6 ("", 2) JMP: 2
     2: #4 line 4 ("", 2) DUP
     3: #4 line 4 ("", 2, 2) 3
     4: #4 line 4 ("", 2, 2, 3) >=
-    5: #4 line 4 ("", 2, 0) JmpIfFalse: +2
+    5: #4 line 4 ("", 2, 0) JmpIfFalse: 7
     7: #4 line 5 ("", 2) ++
-    8: #4 line 6 ("", 3) JMP: -6
+    8: #4 line 6 ("", 3) JMP: 2
     2: #4 line 4 ("", 3) DUP
     3: #4 line 4 ("", 3, 3) 3
     4: #4 line 4 ("", 3, 3, 3) >=
-    5: #4 line 4 ("", 3, 1) JmpIfFalse: +2
-    6: #4 line 4 ("", 3) JMP: +3
+    5: #4 line 4 ("", 3, 1) JmpIfFalse: 7
+    6: #4 line 4 ("", 3) JMP: 9
     9: #4 line 7 ("", 3) POP
    10: #4 line 8 ("") EXIT
 Execution completed in 21 steps.
