--- a/tests/array_next.cmp
+++ b/tests/array_next.cmp
@@ -22,11 +22,11 @@
    18: ARRAY_MAKE
    19: DUP
    20: ARRAY_FIRST
-   21: JmpIfFalse: +5
+   21: JmpIfFalse: 26
    22: OVER
    23: SWAP
    24: ARRAY_NEXT
-   25: JMP: -4
+   25: JMP: 21
    26: POP
    27: POP
    28: {
@@ -42,11 +42,11 @@
    38: ARRAY_MAKE_DICT
    39: DUP
    40: ARRAY_FIRST
-   41: JmpIfFalse: +5
+   41: JmpIfFalse: 46
    42: OVER
    43: SWAP
    44: ARRAY_NEXT
-   45: JMP: -4
+   45: JMP: 41
    46: POP
    47: POP
    48: EXIT
@@ -73,22 +73,22 @@
    18: #4 line 6 ("", 5, 4, 3, 3) ARRAY_MAKE
    19: #4 line 7 ("", 3[5, 4, 3]) DUP
    20: #4 line 7 ("", 3[5, 4, 3], 3[5, 4, 3]) ARRAY_FIRST
-   21: #4 line 9 ("", 3[5, 4, 3], 0, 1) JmpIfFalse: +5
+   21: #4 line 9 ("", 3[5, 4, 3], 0, 1) JmpIfFalse: 26
    22: #4 line 10 ("", 3[5, 4, 3], 0) OVER
    23: #4 line 10 ("", 3[5, 4, 3], 0, 3[5, 4, 3]) SWAP
    24: #4 line 10 ("", 3[5, 4, 3], 3[5, 4, 3], 0) ARRAY_NEXT
-   25: #4 line 11 ("", 3[5, 4, 3], 1, 1) JMP: -4
-   21: #4 line 9 ("", 3[5, 4, 3], 1, 1) JmpIfFalse: +5
+   25: #4 line 11 ("", 3[5, 4, 3], 1, 1) JMP: 21
+   21: #4 line 9 ("", 3[5, 4, 3], 1, 1) JmpIfFalse: 26
    22: #4 line 10 ("", 3[5, 4, 3], 1) OVER
    23: #4 line 10 ("", 3[5, 4, 3], 1, 3[5, 4, 3]) SWAP
    24: #4 line 10 ("", 3[5, 4, 3], 3[5, 4, 3], 1) ARRAY_NEXT
-   25: #4 line 11 ("", 3[5, 4, 3], 2, 1) JMP: -4
-   21: #4 line 9 ("", 3[5, 4, 3], 2, 1) JmpIfFalse: +5
+   25: #4 line 11 ("", 3[5, 4, 3], 2, 1) JMP: 21
+   21: #4 line 9 ("", 3[5, 4, 3], 2, 1) JmpIfFalse: 26
    22: #4 line 10 ("", 3[5, 4, 3], 2) OVER
    23: #4 line 10 ("", 3[5, 4, 3], 2, 3[5, 4, 3]) SWAP
    24: #4 line 10 ("", 3[5, 4, 3], 3[5, 4, 3], 2) ARRAY_NEXT
-   25: #4 line 11 ("", 3[5, 4, 3], 0, 0) JMP: -4
-   21: #4 line 9 ("", 3[5, 4, 3], 0, 0) JmpIfFalse: +5
+   25: #4 line 11 ("", 3[5, 4, 3], 0, 0) JMP: 21
+   21: #4 line 9 ("", 3[5, 4, 3], 0, 0) JmpIfFalse: 26
    26: #4 line 12 ("", 3[5, 4, 3], 0) POP
    27: #4 line 12 ("", 3[5, 4, 3]) POP
    28: #4 line 14 ("") {
@@ -104,22 +104,22 @@
    38: #4 line 14 ("", "c", 5, "b", 4, "a", 3, 3) ARRAY_MAKE_DICT
    39: #4 line 15 ("", 3{"a": 3, "b": 4, "c": 5}) DUP
    40: #4 line 15 ("", 3{"a": 3, "b": 4, "c": 5}, 3{"a": 3, "b": 4, "c": 5}) ARRAY_FIRST
-   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "a", 1) JmpIfFalse: +5
+   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "a", 1) JmpIfFalse: 46
    42: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "a") OVER
    43: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "a", 3{"a": 3, "b": 4, "c": 5}) SWAP
    44: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, 3{"a": 3, "b": 4, "c": 5}, "a") ARRAY_NEXT
-   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, "b", 1) JMP: -4
-   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "b", 1) JmpIfFalse: +5
+   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, "b", 1) JMP: 41
+   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "b", 1) JmpIfFalse: 46
    42: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "b") OVER
    43: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "b", 3{"a": 3, "b": 4, "c": 5}) SWAP
    44: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, 3{"a": 3, "b": 4, "c": 5}, "b") ARRAY_NEXT
-   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, "c", 1) JMP: -4
-   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "c", 1) JmpIfFalse: +5
+   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, "c", 1) JMP: 41
+   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, "c", 1) JmpIfFalse: 46
    42: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "c") OVER
    43: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, "c", 3{"a": 3, "b": 4, "c": 5}) SWAP
    44: #4 line 18 ("", 3{"a": 3, "b": 4, "c": 5}, 3{"a": 3, "b": 4, "c": 5}, "c") ARRAY_NEXT
-   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, 0, 0) JMP: -4
-   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, 0, 0) JmpIfFalse: +5
+   45: #4 line 19 ("", 3{"a": 3, "b": 4, "c": 5}, 0, 0) JMP: 41
+   41: #4 line 17 ("", 3{"a": 3, "b": 4, "c": 5}, 0, 0) JmpIfFalse: 46
    46: #4 line 20 ("", 3{"a": 3, "b": 4, "c": 5}, 0) POP
    47: #4 line 20 ("", 3{"a": 3, "b": 4, "c": 5}) POP
    48: #4 line 21 ("") EXIT
