--- a/tests/array_sort.cmp
+++ b/tests/array_sort.cmp
@@ -28,7 +28,7 @@
    24: ARRAY_MAKE
    25: FOREACH
    26: __FORITER__
-   27: JmpIfFalse: +11
+   27: JmpIfFalse: 38
    28: SV1: mode
    29: !
    30: POP
@@ -38,7 +38,7 @@
    34: @
    35: ARRAY_SORT
    36: POP
-   37: JMP: -11
+   37: JMP: 26
    38: __FORPOP__
    39: EXIT
 
@@ -70,7 +70,7 @@
    24: #4 line 9 ("", 0, 1, 2, 3, 4) ARRAY_MAKE
    25: #4 line 9 ("", 4[0, 1, 2, 3]) FOREACH
    26: #4 line 9 ("") __FORITER__
-   27: #4 line 9 ("", 0, 0, 1) JmpIfFalse: +11
+   27: #4 line 9 ("", 0, 0, 1) JmpIfFalse: 38
    28: #4 line 9 ("", 0, 0) SV1: mode
    29: #4 line 9 ("", 0, 0, SV1) !
    30: #4 line 9 ("", 0) POP
@@ -80,9 +80,9 @@
    34: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
    35: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 0) ARRAY_SORT
    36: #4 line 10 ("", 10["B", "E", "F", "G", "a", "c", "d", "h", "i", "j"]) POP
-   37: #4 line 11 ("") JMP: -11
+   37: #4 line 11 ("") JMP: 26
    26: #4 line 9 ("") __FORITER__
-   27: #4 line 9 ("", 1, 1, 1) JmpIfFalse: +11
+   27: #4 line 9 ("", 1, 1, 1) JmpIfFalse: 38
    28: #4 line 9 ("", 1, 1) SV1: mode
    29: #4 line 9 ("", 1, 1, SV1) !
    30: #4 line 9 ("", 1) POP
@@ -92,9 +92,9 @@
    34: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
    35: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 1) ARRAY_SORT
    36: #4 line 10 ("", 10["a", "B", "c", "d", "E", "F", "G", "h", "i", "j"]) POP
-   37: #4 line 11 ("") JMP: -11
+   37: #4 line 11 ("") JMP: 26
    26: #4 line 9 ("") __FORITER__
-   27: #4 line 9 ("", 2, 2, 1) JmpIfFalse: +11
+   27: #4 line 9 ("", 2, 2, 1) JmpIfFalse: 38
    28: #4 line 9 ("", 2, 2) SV1: mode
    29: #4 line 9 ("", 2, 2, SV1) !
    30: #4 line 9 ("", 2) POP
@@ -104,9 +104,9 @@
    34: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
    35: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 2) ARRAY_SORT
    36: #4 line 10 ("", 10["j", "i", "h", "d", "c", "a", "G", "F", "E", "B"]) POP
-   37: #4 line 11 ("") JMP: -11
+   37: #4 line 11 ("") JMP: 26
    26: #4 line 9 ("") __FORITER__
-   27: #4 line 9 ("", 3, 3, 1) JmpIfFalse: +11
+   27: #4 line 9 ("", 3, 3, 1) JmpIfFalse: 38
    28: #4 line 9 ("", 3, 3) SV1: mode
    29: #4 line 9 ("", 3, 3, SV1) !
    30: #4 line 9 ("", 3) POP
@@ -116,9 +116,9 @@
    34: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
    35: #4 line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 3) ARRAY_SORT
    36: #4 line 10 ("", 10["j", "i", "h", "G", "F", "E", "d", "c", "B", "a"]) POP
-   37: #4 line 11 ("") JMP: -11
+   37: #4 line 11 ("") JMP: 26
    26: #4 line 9 ("") __FORITER__
-   27: #4 line 9 ("", 0) JmpIfFalse: +11
+   27: #4 line 9 ("", 0) JmpIfFalse: 38
    38: #4 line 9 ("") __FORPOP__
    39: #4 line 12 ("") EXIT
 Execution completed in 78 steps.
