--- a/tests/conidle.cmp
+++ b/tests/conidle.cmp
@@ -8,10 +8,10 @@
     4: 1
     5: FOR
     6: __FORITER__
-    7: JmpIfFalse: +4
+    7: JmpIfFalse: 11
     8: CONIDLE
     9: POP
-   10: JMP: -4
+   10: JMP: 6
    11: __FORPOP__
    12: EXIT
 
@@ -23,22 +23,22 @@
     4: #4 line 2 ("", 0, 2) 1
     5: #4 line 2 ("", 0, 2, 1) FOR
     6: #4 line 3 ("") __FORITER__
-    7: #4 line 3 ("", 0, 1) JmpIfFalse: +4
+    7: #4 line 3 ("", 0, 1) JmpIfFalse: 11
     8: #4 line 3 ("", 0) CONIDLE
     9: #4 line 3 ("", 238) POP
-   10: #4 line 4 ("") JMP: -4
+   10: #4 line 4 ("") JMP: 6
     6: #4 line 3 ("") __FORITER__
-    7: #4 line 3 ("", 1, 1) JmpIfFalse: +4
+    7: #4 line 3 ("", 1, 1) JmpIfFalse: 11
     8: #4 line 3 ("", 1) CONIDLE
     9: #4 line 3 ("", 870) POP
-   10: #4 line 4 ("") JMP: -4
+   10: #4 line 4 ("") JMP: 6
     6: #4 line 3 ("") __FORITER__
-    7: #4 line 3 ("", 2, 1) JmpIfFalse: +4
+    7: #4 line 3 ("", 2, 1) JmpIfFalse: 11
     8: #4 line 3 ("", 2) CONIDLE
     9: #4 line 3 ("", 1028) POP
-   10: #4 line 4 ("") JMP: -4
+   10: #4 line 4 ("") JMP: 6
     6: #4 line 3 ("") __FORITER__
-    7: #4 line 3 ("", 0) JmpIfFalse: +4
+    7: #4 line 3 ("", 0) JmpIfFalse: 11
    11: #4 line 2 ("") __FORPOP__
    12: #4 line 5 ("") EXIT
 Execution completed in 25 steps.
