--- a/tests/descrnotify.cmp
+++ b/tests/descrnotify.cmp
@@ -6,12 +6,12 @@
     2: DESCR_ARRAY
     3: FOREACH
     4: __FORITER__
-    5: JmpIfFalse: +6
+    5: JmpIfFalse: 11
     6: SWAP
     7: POP
     8: "Foobar"
     9: DESCRNOTIFY
-   10: JMP: -6
+   10: JMP: 4
    11: __FORPOP__
    12: EXIT
 
@@ -21,31 +21,31 @@
     2: #4 line 2 ("", #-1) DESCR_ARRAY
     3: #4 line 3 ("", 3[3, 11, 13]) FOREACH
     4: #4 line 3 ("") __FORITER__
-    5: #4 line 3 ("", 0, 3, 1) JmpIfFalse: +6
+    5: #4 line 3 ("", 0, 3, 1) JmpIfFalse: 11
     6: #4 line 3 ("", 0, 3) SWAP
     7: #4 line 3 ("", 3, 0) POP
     8: #4 line 4 ("", 3) "Foobar"
     9: #4 line 4 ("", 3, "Foobar") DESCRNOTIFY
 NOTIFY TO DESCR 3, Wizard(#1): Foobar
-   10: #4 line 5 ("") JMP: -6
+   10: #4 line 5 ("") JMP: 4
     4: #4 line 3 ("") __FORITER__
-    5: #4 line 3 ("", 1, 11, 1) JmpIfFalse: +6
+    5: #4 line 3 ("", 1, 11, 1) JmpIfFalse: 11
     6: #4 line 3 ("", 1, 11) SWAP
     7: #4 line 3 ("", 11, 1) POP
     8: #4 line 4 ("", 11) "Foobar"
     9: #4 line 4 ("", 11, "Foobar") DESCRNOTIFY
 NOTIFY TO DESCR 11, John_Doe(#5): Foobar
-   10: #4 line 5 ("") JMP: -6
+   10: #4 line 5 ("") JMP: 4
     4: #4 line 3 ("") __FORITER__
-    5: #4 line 3 ("", 2, 13, 1) JmpIfFalse: +6
+    5: #4 line 3 ("", 2, 13, 1) JmpIfFalse: 11
     6: #4 line 3 ("", 2, 13) SWAP
     7: #4 line 3 ("", 13, 2) POP
     8: #4 line 4 ("", 13) "Foobar"
     9: #4 line 4 ("", 13, "Foobar") DESCRNOTIFY
 NOTIFY TO DESCR 13, Jane_Doe(#6): Foobar
-   10: #4 line 5 ("") JMP: -6
+   10: #4 line 5 ("") JMP: 4
     4: #4 line 3 ("") __FORITER__
-    5: #4 line 3 ("", 0) JmpIfFalse: +6
+    5: #4 line 3 ("", 0) JmpIfFalse: 11
    11: #4 line 3 ("") __FORPOP__
    12: #4 line 6 ("") EXIT
 Execution completed in 29 steps.
