--- a/tests/loop1.cmp
+++ b/tests/loop1.cmp
@@ -6,9 +6,9 @@
     2: DUP
     3: 3
     4: <
-    5: JmpIfFalse: +3
+    5: JmpIfFalse: 8
     6: ++
-    7: JMP: -5
+    7: JMP: 2
     8: POP
     9: EXIT
 
@@ -18,19 +18,19 @@
     2: #4 line 4 ("", 1) DUP
     3: #4 line 4 ("", 1, 1) 3
     4: #4 line 4 ("", 1, 1, 3) <
-    5: #4 line 4 ("", 1, 1) JmpIfFalse: +3
+    5: #4 line 4 ("", 1, 1) JmpIfFalse: 8
     6: #4 line 5 ("", 1) ++
-    7: #4 line 6 ("", 2) JMP: -5
+    7: #4 line 6 ("", 2) JMP: 2
     2: #4 line 4 ("", 2) DUP
     3: #4 line 4 ("", 2, 2) 3
     4: #4 line 4 ("", 2, 2, 3) <
-    5: #4 line 4 ("", 2, 1) JmpIfFalse: +3
+    5: #4 line 4 ("", 2, 1) JmpIfFalse: 8
     6: #4 line 5 ("", 2) ++
-    7: #4 line 6 ("", 3) JMP: -5
+    7: #4 line 6 ("", 3) JMP: 2
     2: #4 line 4 ("", 3) DUP
     3: #4 line 4 ("", 3, 3) 3
     4: #4 line 4 ("", 3, 3, 3) <
-    5: #4 line 4 ("", 3, 0) JmpIfFalse: +3
+    5: #4 line 4 ("", 3, 0) JmpIfFalse: 8
     8: #4 line 7 ("", 3) POP
     9: #4 line 8 ("") EXIT
 Execution completed in 20 steps.
