--- a/tests/loop4.cmp
+++ b/tests/loop4.cmp
@@ -7,10 +7,10 @@
     3: DUP
     4: 3
     5: <=
-    6: JmpIfFalse: +2
-    7: JMP: -5
-    8: JMP: +2
-    9: JMP: -7
+    6: JmpIfFalse: 8
+    7: JMP: 2
+    8: JMP: 10
+    9: JMP: 2
    10: POP
    11: EXIT
 
@@ -21,20 +21,20 @@
     3: #4 line 5 ("", 2) DUP
     4: #4 line 5 ("", 2, 2) 3
     5: #4 line 5 ("", 2, 2, 3) <=
-    6: #4 line 5 ("", 2, 1) JmpIfFalse: +2
-    7: #4 line 5 ("", 2) JMP: -5
+    6: #4 line 5 ("", 2, 1) JmpIfFalse: 8
+    7: #4 line 5 ("", 2) JMP: 2
     2: #4 line 4 ("", 2) ++
     3: #4 line 5 ("", 3) DUP
     4: #4 line 5 ("", 3, 3) 3
     5: #4 line 5 ("", 3, 3, 3) <=
-    6: #4 line 5 ("", 3, 1) JmpIfFalse: +2
-    7: #4 line 5 ("", 3) JMP: -5
+    6: #4 line 5 ("", 3, 1) JmpIfFalse: 8
+    7: #4 line 5 ("", 3) JMP: 2
     2: #4 line 4 ("", 3) ++
     3: #4 line 5 ("", 4) DUP
     4: #4 line 5 ("", 4, 4) 3
     5: #4 line 5 ("", 4, 4, 3) <=
-    6: #4 line 5 ("", 4, 0) JmpIfFalse: +2
-    8: #4 line 6 ("", 4) JMP: +2
+    6: #4 line 5 ("", 4, 0) JmpIfFalse: 8
+    8: #4 line 6 ("", 4) JMP: 10
    10: #4 line 8 ("", 4) POP
    11: #4 line 9 ("") EXIT
 Execution completed in 22 steps.
