--- a/tests/loop6.cmp
+++ b/tests/loop6.cmp
@@ -10,10 +10,10 @@
     6: ARRAY_MAKE
     7: FOREACH
     8: __FORITER__
-    9: JmpIfFalse: +4
+    9: JmpIfFalse: 13
    10: POP
    11: POP
-   12: JMP: -4
+   12: JMP: 8
    13: __FORPOP__
    14: EXIT
 
@@ -27,22 +27,22 @@
     6: #4 line 2 ("", 3, 4, 5, 3) ARRAY_MAKE
     7: #4 line 3 ("", 3[3, 4, 5]) FOREACH
     8: #4 line 4 ("") __FORITER__
-    9: #4 line 4 ("", 0, 3, 1) JmpIfFalse: +4
+    9: #4 line 4 ("", 0, 3, 1) JmpIfFalse: 13
    10: #4 line 4 ("", 0, 3) POP
    11: #4 line 4 ("", 0) POP
-   12: #4 line 5 ("") JMP: -4
+   12: #4 line 5 ("") JMP: 8
     8: #4 line 4 ("") __FORITER__
-    9: #4 line 4 ("", 1, 4, 1) JmpIfFalse: +4
+    9: #4 line 4 ("", 1, 4, 1) JmpIfFalse: 13
    10: #4 line 4 ("", 1, 4) POP
    11: #4 line 4 ("", 1) POP
-   12: #4 line 5 ("") JMP: -4
+   12: #4 line 5 ("") JMP: 8
     8: #4 line 4 ("") __FORITER__
-    9: #4 line 4 ("", 2, 5, 1) JmpIfFalse: +4
+    9: #4 line 4 ("", 2, 5, 1) JmpIfFalse: 13
    10: #4 line 4 ("", 2, 5) POP
    11: #4 line 4 ("", 2) POP
-   12: #4 line 5 ("") JMP: -4
+   12: #4 line 5 ("") JMP: 8
     8: #4 line 4 ("") __FORITER__
-    9: #4 line 4 ("", 0) JmpIfFalse: +4
+    9: #4 line 4 ("", 0) JmpIfFalse: 13
    13: #4 line 3 ("") __FORPOP__
    14: #4 line 6 ("") EXIT
 Execution completed in 27 steps.
