--- a/tests/descr_setuser.cmp
+++ b/tests/descr_setuser.cmp
@@ -26,8 +26,7 @@
     7: #4 line 4 ("", 11, 11, "jane_doe") PMATCH
     8: #4 line 4 ("", 11, 11, #6) "53cr37"
     9: #4 line 4 ("", 11, 11, #6, "53cr37") DESCR_SETUSER
-BOOTED DESCRIPTOR 11: John_Doe(#5)
-RECONNECTED DESCRIPTOR 11 TO Jane_Doe(#6) USING PW '53cr37'
+RECONNECTED DESCRIPTOR 11 FROM John_Doe(#5) TO Jane_Doe(#6) USING PW '53cr37'
    10: #4 line 5 ("", 11) DESCRDBREF
    11: #4 line 5 ("", #6) POP
    12: #4 line 6 ("") EXIT
