--- a/tests/array_explode.cmp
+++ b/tests/array_explode.cmp
@@ -34,7 +34,7 @@
    12: #4 line 7 ("", "foo", 9, "bar", 8, "baz", 5, "qux", 2, 8, 2) /
    13: #4 line 7 ("", "foo", 9, "bar", 8, "baz", 5, "qux", 2, 4) ARRAY_MAKE_DICT
    14: #4 line 8 ("", 4{"bar": 8, "baz": 5, "foo": 9, "qux": 2}) ARRAY_EXPLODE
-   15: #4 line 9 ("", "qux", 2, "foo", 9, "baz", 5, "bar", 8, 4) EXIT
+   15: #4 line 9 ("", "bar", 8, "baz", 5, "foo", 9, "qux", 2, 4) EXIT
 Program exited.
 Execution completed in 16 steps.
 
