--- a/tests/array_keys.cmp
+++ b/tests/array_keys.cmp
@@ -30,7 +30,7 @@
    10: #4 line 2 ("", "a", 1, "b", 2, "c", 3, 6, 2) /
    11: #4 line 2 ("", "a", 1, "b", 2, "c", 3, 3) ARRAY_MAKE_DICT
    12: #4 line 3 ("", 3{"a": 1, "b": 2, "c": 3}) ARRAY_KEYS
-   13: #4 line 4 ("", "a", "c", "b", 3) EXIT
+   13: #4 line 4 ("", "a", "b", "c", 3) EXIT
 Program exited.
 Execution completed in 14 steps.
 
